--- a/hw09/hw09.tex
+++ b/hw09/hw09.tex
@@ -221,4 +221,12 @@ The odds after switching are \(\frac{k (n - 1)}{n (n - j - 1)}\).
 Thus, the ratio of staying over switching are \(\frac{n - 1}{n - j - 1}\).
 Thus, \(k\) is irrelevant, and you want the highest \(j\) possible, or \(j = n - k - 1\).
 
+\section{Sundry}
+
+I did homework with:
+\begin{itemize}
+    \item Manny Fuentes \href{mailto:mfuentes@berkeley.edu}{mfuentes@berkeley.edu}
+    \item Victor Zhang \href{mailto:vzhang6@berkeley.edu}{vzhang6@berkeley.edu}
+\end{itemize}
+
 \end{document}
