--- a/hw13/hw13.tex
+++ b/hw13/hw13.tex
@@ -20,28 +20,29 @@ When hashing \(d_2\), \(\Pr(d_2) = \frac{n - 1}{n}\).
 Inductively,
 \begin{align}
     \Pr(d_n) &= \prod_{i \in [1, n]} \frac{n - i - 1}{n} = \frac{n!}{n^n} \\
-    \lim_{n \to \infty} \frac{n!}{n^n} = 0
+    \lim_{n \to \infty} \frac{n!}{n^n} &= 0
 \end{align}
 
 \subsection{}
 
-We can model this problem as a geometric distribution with probability \(\frac{1}{n}\).
-Let our random variable \(X\) be the number of collisions.
+We can model this problem as a geometric distribution with parameter \(\frac{1}{n}\).
+Let our random variable \(X\) be the number of attempts.
 Thus, we have
 \begin{equation}
     \E(X) = \frac{1}{p} = n
 \end{equation}
+However, we must subtract one because the last hashing attempt will be successful, so \(\E(C) = \E(X) - 1 = n - 1\).
 
 \subsection{}
 
-We can use the same distribution, except we have \(p = \frac{n - k}{n}\).
-This means \(\E(C_k) = \frac{n}{n - k}\).
+We can use the same distribution, except we have parameter \(p = \frac{n - k + 1}{n}\).
+This means \(\E(C_k) = \frac{n}{n - k + 1} - 1 = \frac{k - 1}{n - k + 1}\).
 
 \subsection{}
 
 We have
 \begin{equation}
-    \E(C) = \sum_{i \in [1, n]} \frac{n}{n - i}
+    \E(C) = \sum_{i \in [1, n]} \frac{i - 1}{n - i + 1}
 \end{equation}
 
 \section{Geometric and Poisson}
@@ -91,8 +92,8 @@ So the probability of both Alice and Bob meeting appear like this:
 \begin{center}
     \includegraphics[width=0.8\textwidth]{q4.png}
 \end{center}
-Note that since this is a continuous distribution, \(\Pr(A = i \cap B = i) = 0\) for any time \(i\).
-Thus, \(\Pr(A = i, B = i)\) is nothing more than the area of the parallelogram truncated at the unit square, or \(0.5 \cdot 1 - 0.25^2 = \num{0.4375}\).
+Note that since this is a continuous distribution, \(\Pr(A = i, B = i) = 0\) for any time \(i\).
+Thus, \(\Pr(A = i, B = i)\) is nothing more than the area of the parallelogram bounded by the unit square, or \(0.5 \cdot 1 - 0.25^2 = \num{0.4375}\).
 
 \section{Sundry}
 
