--- a/hw13/hw13.tex
+++ b/hw13/hw13.tex
@@ -40,7 +40,7 @@ This means \(\E(C_k) = \frac{n}{n - k + 1} - 1 = \frac{k - 1}{n - k + 1}\).
 
 \subsection{}
 
-We have
+By linearity of expectation, we can construct a sum
 \begin{equation}
     \E(C) = \sum_{i \in [1, n]} \frac{i - 1}{n - i + 1}
 \end{equation}
